--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="%PUBLIC_URL%/googleApi.js"></script>
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@300&family=Lato&family=Righteous&family=Shizuru&display=swap" rel="stylesheet">
+    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://kit.fontawesome.com/23d91cd302.js" crossorigin="anonymous"></script>
+    <title>Youtube time machine</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
